fixing height on safari

--- a/frontend/src/components/Riddle/Options/styles.css
+++ b/frontend/src/components/Riddle/Options/styles.css
@@ -1,15 +1,45 @@
 .button-container {
   overflow-y: auto;
+  padding-top: 1rem !important;
   padding-bottom: 1rem !important;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
 }
 
-.button-container > .nes-btn {
-  margin: 20px 10px 0 10px;
+.button-container:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 10%;
+  width: 100%;
+  content: "";
+  background: linear-gradient(
+    to top,
+    rgba(255, 255, 255, 1) 80%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
-@media (max-width: 600px) {
+.button-container .nes-btn:last-child {
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 600px) {
   .button-container {
-    display: flex;
-    flex-direction: column;
+    display: initial;
+  }
+
+  .button-container > .nes-btn {
+    margin: 20px 10px 0 10px;
+  }
+
+  .button-container:after {
+    content: "";
+    background: none;
+  }
+
+  .button-container .nes-btn:last-child {
+    margin-bottom: 0;
   }
 }
